Fix nav collapse

--- a/themes/wc-eh-docs/assets/scss/buttons/_buttons.scss
+++ b/themes/wc-eh-docs/assets/scss/buttons/_buttons.scss
@@ -11,9 +11,21 @@
   background-color: transparent;
 }
 
-.btn-toggle:hover,
-.btn-toggle:focus {
-  color: rgba(0, 0, 0, .85);
+.btn-toggle a,
+.btn-toggle a:hover,
+.btn-toggle a:focus,
+.seudo-btn:hover a,
+.seudo-btn:focus a,
+.seudo-btn a {
+  background-color: inherit !important;
+  color: inherit !important;
+}
+
+.link-dark.seudo-btn:hover,
+.link-dark.seudo-btn:focus,
+.link-dark:hover,
+.link-dark:focus {
+  color: rgba(0, 0, 0, .85) !important;
   background-color: $active-nav !important;
 }
 
@@ -25,24 +37,20 @@
   transform-origin: .5em 50%;
 }
 
-.btn-toggle[aria-expanded="true"] {
-  color: rgba(0, 0, 0, .85);
-}
-
 .btn-toggle[aria-expanded="true"]::before {
   transform: rotate(90deg);
 }
 
-.btn-toggle-nav a {
+.btn-toggle-nav .btn-toggle-nav {
   padding: .1875rem .5rem;
   margin-top: .125rem;
   margin-left: 1.25rem;
 }
 
-.btn-toggle-nav a:hover,
-.btn-toggle-nav a:focus,
-.active-nav, a[aria-expanded="true"] {
-  background-color: $active-nav;
+.btn-toggle-nav .btn-toggle:hover,
+.btn-toggle-nav .btn-toggle:focus,
+.active-nav {
+  background-color: $active-nav !important;
 }
 
 .btn-close.white {
